saving data on client

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@ input[type=submit]:active { border: 1px solid #aaa; border-bottom: 1px solid #88
 		insertMessage( nickname + ' : ' + chat_input.value );
 		chat_input.value = null;
 	};
-	server.on( 'messages', function( data ) {
-		insertMessage( data );
+	server.on( 'messages', function( message ) {
+		insertMessage( message );
 	});
-	server.on( 'connect', function( data ) {
+	server.on( 'connect', function( message ) {
 		chat_console.innerHTML = '<span class="connected">connected to the chat server</span><br/>';
 		nickname = prompt( 'what is your nickanme?' );
-		server.emit( 'join', nickname );
+		server.emit( 'join', nickname ); //notify the server of the user nickname
 	});
 	server.on( 'add chatter', insertChatter );
 	server.on( 'remove chatter', removeChatter );
